--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Christian's Portfolio</h1>
-    <h2>I am a fullstack web developer</h2>
+    <h2>I am a fullstack Java developer</h2>
     <hr />
     <h3><a href="https://qikpharma.com/#/">Pharmaceutical Project</a></h3>
     <img src="./assets/images/qikpharma.png" alt="pharmaceutical and health care project review" height="200" />
