--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <h3><a href="https://christianribig5.github.io/tindog/">Canophile - Pet project</a></h3>
     <img src="./assets/images/tindog.png" alt="tindog canophile project review" height="200" />
     <hr />
-    <a href="./public/resume.html">Contact Me</a>
+    <a href="#">Contact Me</a>
+    <a href="https://christianribig5.github.io/myresume/">My Resume</a>
 
 
 </body>
