--- a/index.html
+++ b/index.html
@@ -2,29 +2,70 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width-device-width, initial-scale = 1.0">
-    <meta name="keywords" content="christian, onyeukwu, nduka, christian onyeukwu,
-        fullstack developer,java developer, software engineering, christian's portfolio" />
-    <title>christian's portfolio</title>
-    <link rel="stylesheet" href="linkToCSS" />
+    <title>Portfolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/custom.css">
 </head>
 
 <body>
-    <h1>Christian's Portfolio</h1>
-    <h2>I am a fullstack Java developer</h2>
-    <hr />
-    <h3><a href="https://qikpharma.com/#/">Pharmaceutical Project</a></h3>
-    <img src="./assets/images/qikpharma.png" alt="pharmaceutical and health care project review" height="200" />
-    <h3><a href="https://www.nuodal.com/">Call for Prayer Project</a></h3>
-    <img src="./assets/images/nuodal.png" alt="nuodal call for prayer project review" height="200" />
-    <h3><a href="https://christianribig5.github.io/tindog/">Canophile - Pet project</a></h3>
-    <img src="./assets/images/tindog.png" alt="tindog canophile project review" height="200" />
-    <hr />
-    <a href="#">Contact Me</a>
-    <a href="https://christianribig5.github.io/myresume/">My Resume</a>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Portfolio</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="jumbotron">
+        <div class="container text-center">
+            <h1>My Portfolio</h1>
+            <p>Some text that represents "Me"...</p>
+        </div>
+    </div>
+
+    <div class="container bg-3 text-center">
+        <h3>Some of my Work</h3><br>
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <p>Some text..</p>
+                <img src="./assets/images/qikpharma.png" height="200" class="img-responsive job-img " alt="Image">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <p>Some text..</p>
+                <img src="./assets/images/nuodal.png" height="200" class="img-responsive job-img" alt="Image">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <p>Some text..</p>
+                <img src="./assets/images/tindog.png" height="200" class="img-responsive  job-img" alt="Image">
+            </div>
+        </div>
+    </div>
 
 
+    <footer class="container text-center">
+        <p>Footer Text</p>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
